<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/login"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/largeMargin"
        android:layout_marginTop="@dimen/mediumMargin"
        android:layout_marginEnd="@dimen/largeMargin"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_buttons"
        android:text="@string/login"
        android:textSize="@dimen/mediumText"
        app:layout_constraintBottom_toTopOf="@id/btn_create_account_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_create_account_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/largeMargin"
        android:layout_marginTop="@dimen/mediumMargin"
        android:layout_marginEnd="@dimen/largeMargin"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_buttons"
        android:text="@string/create_account"
        android:textSize="@dimen/mediumText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/pb_login"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:elevation="16dp"
        android:padding="@dimen/mediumPadding"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email_login"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/largeMargin"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="@dimen/largeMargin"
        app:boxStrokeColor="@color/iconTint"
        app:boxStrokeErrorColor="@color/errorTint"
        app:boxStrokeWidthFocused="@dimen/boxStrokeWidthFocused"
        app:endIconMode="clear_text"
        app:endIconTint="@color/iconTint"
        app:errorEnabled="true"
        app:errorIconTint="@color/errorTint"
        app:errorTextColor="@color/errorTint"
        app:hintTextColor="@color/iconTint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_login"
        app:startIconDrawable="@drawable/ic_email"
        app:startIconTint="@color/iconTint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password_login"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/largeMargin"
        android:layout_marginEnd="@dimen/largeMargin"
        app:boxStrokeColor="@color/iconTint"
        app:boxStrokeErrorColor="@color/errorTint"
        app:boxStrokeWidthFocused="@dimen/boxStrokeWidthFocused"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/iconTint"
        app:errorEnabled="true"
        app:errorIconTint="@color/errorTint"
        app:errorTextColor="@color/errorTint"
        app:hintTextColor="@color/iconTint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_email_login"
        app:startIconDrawable="@drawable/ic_password"
        app:startIconTint="@color/iconTint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
